--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .hero::before {
     content: "";
-    background: url('image.png') no-repeat center center / cover;
+    background: url('eed.png') no-repeat center center / cover;
     position: absolute;
     top: 0;
     left: 0;
