--- a/templates/index.html
+++ b/templates/index.html
@@ -39,11 +39,20 @@
         <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
         <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
         <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
-        <a href="/login"> <li class="flex items-center space-x-2 border-2 border-yellow-300 hover:border-yellow-500 transform-gpu transition-transform text-white hover:bg-yellow-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold
-        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5" alt="Google logo">
-         <span>Login</span>
-                    </li>
-        </ul>
+        {% if user_email %}
+            <a href="/logout">
+                <li class="border-2 border-red-300 hover:border-red-500 transform-gpu transition-transform text-white hover:bg-red-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold">
+                    Logout
+                </li>
+            </a>
+        {% else %}
+            <a href="/login"><li class="flex items-center space-x-2 border-2 border-yellow-300 hover:border-yellow-500 transform-gpu transition-transform text-white hover:bg-yellow-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold">
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5" alt="Google logo">
+                    <span>Login</span>
+                </li>
+            </a>
+        {% endif %}
+    </ul>
 
         <button id="hamburger" class="lg:hidden text-white ml-4">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
@@ -57,6 +66,19 @@
         <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
         <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
         <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
+        {% if user_email %}
+        <a href="/logout"><li class="border-2 border-red-300 hover:border-red-500 transform-gpu transition-transform text-white hover:bg-red-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold">
+                    Logout
+                </li>
+            </a>
+        {% else %}
+            <a href="/login">
+                <li class="flex items-center space-x-2 border-2 border-yellow-300 hover:border-yellow-500 transform-gpu transition-transform text-white hover:bg-yellow-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold">
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5" alt="Google logo">
+                    <span>Login with Google</span>
+                </li>
+            </a>
+        {% endif %}
     </ul>
 
     <script>
